--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,9 @@
-*, *::before, *::after {
+
+* {
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
   }
+
 
 :root {
 --button: #ff7733;
@@ -9,7 +11,7 @@
 --wrong: #e60000;
 }
 
-  
+
 body {
     padding: 0;
     margin: 0;
